# k-means-with-MPI

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  help.c  help.h  kmeans.c  kmeans.h  main.c
datasets/: README.md
datasets/avila/: data.txt  res.txt
datasets/blobs/: data.txt  res.txt
datasets/blood_transfusion/: data.txt  res.txt
datasets/ecoli/: data.txt  res.txt
datasets/engytime/: data.txt  res.txt
datasets/haberman/: data.txt
datasets/leaf/: data.txt  res.txt
datasets/libras_movement/: data.txt
datasets/longsquare/: data.txt  res.txt
datasets/musk_v1/: data.txt
datasets/optical_recognition/: data.txt
datasets/page_blocks/: data.txt  res.txt
datasets/parkinsons/: data.txt
datasets/pen_based_recognition/: data.txt
datasets/smile/: data.txt
datasets/spambase/: data.txt
datasets/square/: data.txt
datasets/triangle/: data.txt  res.txt
datasets/two_moons/: data.txt
datasets/vehicle_silhouettes/: res.txt
datasets/vertebral_column/: data.txt
datasets/wine_red/: data.txt
datasets/wine_white/: data.txt
datasets/yeast/: data.txt
examplesDataSets/iris/: test150
examplesDataSets/twoMoons/: ideal400
examplesDataSets/wine/: ideal178  test178
src/: help.c  help.h  kmeans.c  kmeans.h  main.c
